--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
             <div class="col-md-6" style="border: solid #cccccc 1px">
-                <h3 id="start/quit">Press any key to get started!</h3>
+                <h3 id="startquit">Press any key to get started!</h3>
             </div>
             <div class="col-md-2" style="border: solid #cccccc 1px">
                 HP: <h5 id="HPremaining"></h5>
